add getUserId from username request to db

--- a/views/public/index.html
+++ b/views/public/index.html
@@ -9,14 +9,14 @@
   <div class="wrapper">
     <form action="/test" method="POST" class="mui-form">
       <legend>Title</legend>
-      <div class="mui-textfield mui-textfield--float-label">
+      <!-- <div class="mui-textfield mui-textfield--float-label">
         <input name='input1' type="text" class="mui--is-empty mui--is-untouched mui--is-pristine">
         <label>Input 1</label>
       </div>
       <div class="mui-textfield mui-textfield--float-label">
         <input type="text" name='input2' class="mui--is-empty mui--is-untouched mui--is-pristine">
         <label>Input 2</label>
-      </div>
+      </div> -->
       <div class="mui-textfield mui-textfield--float-label">
         <textarea name='textarea' class="mui--is-empty mui--is-untouched mui--is-pristine"></textarea>
         <label>Textarea</label>
