--- a/views/public/index.html
+++ b/views/public/index.html
@@ -1,32 +1,11 @@
-<html lang="en-us">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <title>User kick form</title>
 </head>
 <body>
-
-  <div class="wrapper">
-    <form action="/test" method="POST" class="mui-form">
-      <legend>Title</legend>
-      <!-- <div class="mui-textfield mui-textfield--float-label">
-        <input name='input1' type="text" class="mui--is-empty mui--is-untouched mui--is-pristine">
-        <label>Input 1</label>
-      </div>
-      <div class="mui-textfield mui-textfield--float-label">
-        <input type="text" name='input2' class="mui--is-empty mui--is-untouched mui--is-pristine">
-        <label>Input 2</label>
-      </div> -->
-      <div class="mui-textfield mui-textfield--float-label">
-        <textarea name='textarea' class="mui--is-empty mui--is-untouched mui--is-pristine"></textarea>
-        <label>Textarea</label>
-      </div>
-      <button type="submit" class="mui-btn mui-btn--raised">Submit</button>
-    </form>
-    <div class="mui-panel result">
-    </div>
-  </div>
-
-  <script src="js/bundle.js" charset="utf-8"></script>
+    <div id="app"></div>
+    <script src="bundle.js"></script>
 </body>
 </html>
