--- a/views/public/index.html
+++ b/views/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>User kick form</title>
+    <title>Telegram Chat Management</title>
 </head>
 <body>
     <div id="app"></div>
